[package]
name = "twozero48"
version = "0.1.5"
authors = ["Devdutt Shenoi <devdutt@outlook.in>"]
edition = "2024"
license = "MIT"
repository = "https://github.com/de-sh/twozero48"
description = "A CLI implementation of 2048, in rust"

[dependencies]
clap = { version = "4.6", features = ["derive", "cargo"] }
rand = "0.10"
termion = "1"

[[bin]]
name = "twozero48"
path = "src/main.rs"
