[package]
name = "twozero48"
version = "0.2.0"
authors = ["Devdutt Shenoi <devdutt@outlook.in>"]
edition = "2024"
license = "MIT"
repository = "https://github.com/de-sh/twozero48"
description = "A CLI implementation of 2048, in rust"

[dependencies]
clap = { version = "4.6", features = ["derive", "cargo"] }
crossterm = "0.29"
rand = "0.10"
ratatui = "0.30"

[[bin]]
name = "twozero48"
path = "src/main.rs"
